# sftp-file-transfer

./: README.md  pyproject.toml  run_uploader.bat
sftp_file_transfer/: local_copy.py  main.py  scheduled.py
sftp_file_transfer/components/: env_loader.py  file_manager.py  logger_setup.py  sftp_manager.py
tests/: conftest.py
tests/components/: test_file_manager.py  test_sftp_manager.py
