[project]
name = "sftp-file-transfer"
version = "0.1.0"
description = "Automated file transfer stream using SFTP and made in python."
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.3"
taskipy = "^1.14.1"

